[project]
name = "aigun-rickandmorty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "huggingface-hub>=1.14.0",
    "langchain>=1.3.0",
    "langchain-ollama>=1.1.0",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "openai-clip>=1.0.1",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "safetensors>=0.7.0",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "timm>=1.0.27",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }